@@ -1,6 +1,13 @@
-                CHANGES IN TraMineRextras VERSION 0.7.2 [2021-04-30] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.7.2 [2021-06-21] (Development version)
 
 Changes in existing functions:
+    o   seqindic.dyn() gains two arguments: 'wstep' to control 
+        spacing between successive windows and 
+        'endmiss.as.void' to control whether sequences end at 
+        first ending missing value or at the first void.
+    o   plot.dynin() (plot method for objects produced by 
+        seqindic.dyn) can now plot series of summary values 
+        that end with missing values.
     o   TSE_to_STS() now checks that tmin > 0.
     o   seqplot.rf() now returns (invisibly) group memberships.
 
